assets/css/app.sass
@import "bulma"
@import "~tippy.js/dist/tippy.css"

.navbar
  overflow: auto
  padding-left: 0.3rem

  .logo
    padding-top: 1rem

  &-title
    font-size: 1.5rem

.hero-body
  padding: 0
  align-items: stretch !important

  .content
    display: flex
    width: 100%

    &-form
      padding: 1rem

      form
        padding-top: 1rem

        .select
          display: flex
          flex-direction: column

          input
            margin: 0 0.5rem 0 0.3rem

        .checkbox label
          padding-left: 0.4rem

        .sprite-info
          width: 0.9rem
          margin-left: 0.3rem

    &-map
      flex: 1

      #map
        height: 100%

.hero-foot
  text-align: center
  padding: 0.3rem 0
  font-size: 0.8rem

  .links a
    margin-left: 0.5rem
    color: inherit
    text-decoration: underline

#accidentFilter
  display: block

#toggleFilterBtn
  display: none

.horizontal-header
  text-align: center !important

.vertical-header
  vertical-align: middle !important
  text-align: center

  &-content
    writing-mode: tb-rl
    border: none !important

tr:last-child td, .content table tbody tr:last-child th
  border: 1px solid #dbdbdb !important
  border-width: 0 0 1px !important

.mapboxgl-popup-content
  width: 23rem

@media (max-width: $tablet)
  .navbar
    padding: 0

    &-item
      padding-right: 0

    &-title
      font-size: 1rem

  .hero-body .content
    flex-direction: column

  #accidentFilter
    display: none

  #toggleFilterBtn
    display: block

